fluxcms_ as new prefixes
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6289 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/install/build.xml
+++ b/install/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<project name="BxCMS" default="dist" basedir=".">
+<project name="Flux CMS" default="dist" basedir=".">
    
    <property name="hasTidy" value="auto"/>
     <target name="prepare" depends="prereq">
