--- a/install/build.xml
+++ b/install/build.xml
@@ -5,23 +5,23 @@
    <property name="hasTidy" value="auto"/>
     <target name="prepare" depends="prereq">
         <mkdir dir="${BxRootDir}/tmp/"/>
-        <copy includeemptydirs="true" todir="${BxRootDir}/data/">
-            <fileset dir="${BxRootDir}/install/dist/data/">
+        <copy includeemptydirs="true" todir="${BxRootDir}/_hosts/live/data/">
+            <fileset dir="${BxRootDir}/install/dist/_hosts/live/data/">
                 <exclude name="**/.svn/"/>
             </fileset>
         </copy>
 
-        <mkdir dir="${BxRootDir}/files/"/>
-        <copy includeemptydirs="true" todir="${BxRootDir}/files/">
-            <fileset dir="${BxRootDir}/install/dist/files/">
+        <mkdir dir="${BxRootDir}/_hosts/live/files/"/>
+        <copy includeemptydirs="true" todir="${BxRootDir}/_hosts/live/files/">
+            <fileset dir="${BxRootDir}/install/dist/_hosts/live/files/">
                 <exclude name="**/.svn/"/>
             </fileset>
         </copy>
 
         <mkdir dir="${BxRootDir}/dynimages/"/>
-        <mkdir dir="${BxRootDir}/lang/"/>
-        <copy includeemptydirs="true" todir="${BxRootDir}/lang/">
-            <fileset dir="${BxRootDir}/install/dist/lang/">
+        <mkdir dir="${BxRootDir}/_hosts/live/lang/"/>
+        <copy includeemptydirs="true" todir="${BxRootDir}/_hosts/live/lang/">
+            <fileset dir="${BxRootDir}/install/dist/_hosts/live/lang/">
                 <exclude name="**/.svn/"/>
             </fileset>
         </copy>
@@ -82,7 +82,7 @@
     
      <mdb2 src="${BxRootDir}/tmp/bxcms.prefixed.sql" url="${database.type}://${database.user}:${database.password}@${database.host}/${database.name}"></mdb2>
      <mdb2  url="${database.type}://${database.user}:${database.password}@${database.host}/${database.name}">
-     INSERT INTO ${database.prefix}users ( user_login, user_pass) VALUES ('${cms.user}',md5('${cms.password}'));
+     INSERT INTO ${database.prefix}live__users ( user_login, user_pass) VALUES ('${cms.user}',md5('${cms.password}'));
      </mdb2>
      <delete file="bxcms.prefixed.sql" dir="${BxRootDir}/tmp/" />
     </target>
@@ -91,7 +91,7 @@
         <copy file="${BxRootDir}/div/db/bxcms.sql" tofile="${BxRootDir}/tmp/bxcms.prefixed.sql" overwrite="true">
             <filterchain>
                     <replacetokens begintoken="##" endtoken="##">
-                        <token key="bxcms_" value="${database.prefix}"/>
+                        <token key="bxcms_" value="${database.prefix}live__"/>
                     </replacetokens>
                 </filterchain>
         </copy>
